--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         
@@ -102,6 +103,9 @@
         </div>
       </div>
     </div>
+    <div class="container">
+    	<div data-icon="a"></div>
+    </div>
 
     <div class="container" style="font-family: Museo-Sans">
       <!--
@@ -138,10 +142,10 @@
 		          	<h2 class="featurette-heading">Schedule a Visit</h2>
 		          	<ul style="list-style-type: none">
 			          	<li style="padding-top: 10px">
-			          		<p class="lead"><img src="./img/featureicons/wallet/piggy-bank@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;See the property before you name your rent price.</p>
+			          		<p class="lead"><span class="glyphicon glyphicon-search"></span> &nbsp;&nbsp;&nbsp;See the property that could be your future home.</p>
 			          	</li>
-			          	<li>
-			          		<p class="lead"><img src="./img/featureicons/wallet/wallet@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Attend the open house.</p>
+			          	<li> <!-- Unable to get fontastic to work -->
+			          		<p class="lead"><span class="icon-calendar"></span> &nbsp;&nbsp;&nbsp;Attend the open house.</p>
 			          	</li>
 			          	<li>
 			          		<p class="lead"><img src="./img/featureicons/wallet/money@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Schedule an appointment with the landlord or leasing agent.</p>
@@ -164,16 +168,13 @@
 		        	<h2 class="featurette-heading">Name Your Rent<span class="text-muted">&trade;</span> Price</h2>
 		     		<ul style="list-style-type: none">
 			          	<li style="padding-top: 10px">
-			          		<p class="lead"><img src="./img/featureicons/compare/lock@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Fill in the amount you would like to pay for rent.</p>
+			          		<p class="lead"><img src="./img/featureicons/compare/lock@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Offer the rent you are willing to pay.</p>
 			          	</li>
 			          	<li>
 			          		<p class="lead"><img src="./img/featureicons/compare/map-home@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Tell us when you can move-in.</p>
 			          	</li>
 			          	<li>
 			          		<p class="lead"><img src="./img/featureicons/compare/uptrend@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Pick how long you want to stay (month-to-month OR lease length).</p>
-			          	</li>
-			          	<li>
-			          		<p class="lead"><img src="./img/featureicons/compare/uptrend@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;We secure your data & value your privacy.</p>
 			          	</li>
 		          	</ul>
 		       	</div>
@@ -189,10 +190,10 @@
 			          		<p class="lead"><img src="./img/featureicons/wallet/piggy-bank@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;No application or credit check fee!</p>
 			          	</li>
 			          	<li>
-			          		<p class="lead"><img src="./img/featureicons/wallet/wallet@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Fill in your application in-person or online.</p>
+			          		<p class="lead"><img src="./img/featureicons/wallet/wallet@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Complete your application in-person or online.</p>
 			          	</li>
 			          	<li>
-			          		<p class="lead"><img src="./img/featureicons/wallet/money@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Collect your keys to start moving!</p>
+			          		<p class="lead"><img src="./img/featureicons/wallet/money@2x.png" height="30px" width="30px" />&nbsp;&nbsp;&nbsp;Prepare to move.</p>
 			          	</li>
 				    </ul>
 		        </div>
