Changed Title and Added favicon

--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>rented.io</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="assets/img/favicon.ico">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
