--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -23,6 +23,8 @@
     </div>
     <div id="main-wrapper">
         <div id="main">
+            <div id="main-header" ng-hide="isActive('/home')">
+            </div>
             <div id="main-inner">
                 <div ng-view autoscroll="true"></div>
             </div>
