--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0;">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rented - Name Your Rent</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="shortcut icon" href="assets/img/favicon.ico">
