--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rented | Name Your Rent</title>
+    <title>Rented</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="shortcut icon" href="assets/img/favicon.ico">
     <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
