fix top channel

--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -32,8 +32,9 @@
     </div>
     <div id="main-wrapper">
         <div id="main">
-            <div id="main-header" ng-show="secondaryNav">
+            <div id="main-header" ng-show="secondaryNav||banner.content">
                 <ng-include src="secondaryNav"></ng-include>
+                <ng-include src="'nav/partials/banner.tpl.html'"></ng-include>
             </div>
             <div id="main-inner">
                 <div ng-view autoscroll="true"></div>
