--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -53,7 +53,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-49864239-1', 'auto');
-  ga('send', 'pageview');
+/*  ga('send', 'pageview'); commented out for angularitcs */ 
 
 </script>
 
