--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,15 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html ng-app="baseCodeSqlApp">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="fragment" content="!">
     <base href="/">
-    <title></title>
-    <meta name="description" content="">
+    <title>{{seo.pagetitle}}</title>
+    <meta name="description" content="{{ seo.metaDescription }}">
+
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
@@ -28,7 +31,7 @@
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
-  <body ng-app="baseCodeSqlApp">
+  <body >
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
