configure S3, upload & download

--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="fragment" content="!">
     <base href="/">
-    <title>{{seo.pagetitle}}</title>
-    <meta name="description" content="{{ seo.metaDescription }}">
+    <title>Rented co</title>
+    <meta name="description" content="">
 
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -65,6 +65,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
