--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -6,47 +6,46 @@
       <h1>Sign up</h1>
     </div>
     <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="register(form)" novalidate>
+      <form class="form" name="form" ng-submit="signup.register(form)" novalidate>
 
-        <div class="form-group" ng-class="{'has-success': form.firstname.$valid && submitted, 'has-error': form.firstname.$invalid && submitted}">
+        <div class="form-group" ng-class="{'has-success': form.firstname.$valid && signup.submitted, 'has-error': form.firstname.$invalid && signup.submitted}">
             <label for="firstname">First Name</label>
-            <input id="firstname" type="text" name="firstname" class="form-control" ng-model="user.firstname" required/>
-            <p class="help-block" ng-show="form.firstname.$error.required && submitted">A first name is required</p>
+            <input id="firstname" type="text" name="firstname" class="form-control" ng-model="signup.user.firstname" required/>
+            <p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>
         </div>
 
-        <div class="form-group" ng-class="{'has-success': form.middlename.$valid && submitted, 'has-error': form.middlename.$invalid && submitted}">
+        <div class="form-group" ng-class="{'has-success': form.middlename.$valid && signup.submitted, 'has-error': form.middlename.$invalid && signup.submitted}">
             <label for="middlename">Middle Name</label>
-            <input id="middlename" type="text" name="middlename" class="form-control" ng-model="user.middlename" required/>
-            <p class="help-block" ng-show="form.middlename.$error.required && submitted">A middle name is required</p>
+            <input id="middlename" type="text" name="middlename" class="form-control" ng-model="signup.user.middlename" required/>
+            <p class="help-block" ng-show="form.middlename.$error.required && signup.submitted">A middle name is required</p>
         </div>
 
-        <div class="form-group" ng-class="{'has-success': form.lastname.$valid && submitted, 'has-error': form.lastname.$invalid && submitted}">
+        <div class="form-group" ng-class="{'has-success': form.lastname.$valid && signup.submitted, 'has-error': form.lastname.$invalid && signup.submitted}">
             <label for="lastname">Last Name</label>
-            <input id="lastname" type="text" name="lastname" class="form-control" ng-model="user.lastname" required/>
-            <p class="help-block" ng-show="form.lastname.$error.required && submitted">A last name is required</p>
+            <input id="lastname" type="text" name="lastname" class="form-control" ng-model="signup.user.lastname" required/>
+            <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
         </div>
 
-        <div class="form-group" ng-class="{'has-success': form.username.$valid && submitted, 'has-error': form.username.$invalid && submitted}">
+        <div class="form-group" ng-class="{'has-success': form.username.$valid && signup.submitted, 'has-error': form.username.$invalid && signup.submitted}">
             <label for="username">Username</label>
-            <input id="username" type="text" name="username" class="form-control" ng-model="user.username" required/>
-            <p class="help-block" ng-show="form.username.$error.required && submitted">A username is required</p>
+            <input id="username" type="text" name="username" class="form-control" ng-model="signup.user.username" required/>
+            <p class="help-block" ng-show="form.username.$error.required && signup.submitted">A username is required</p>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted, 'has-error': form.email.$invalid && submitted }">
+        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && signup.submitted, 'has-error': form.email.$invalid && signup.submitted }">
             <label for="email">Email</label>
-            <input id="email" type="email" name="email" class="form-control" ng-model="user.email" required mongoose-error/>
-            <p class="help-block" ng-show="form.email.$error.email && submitted">Doesn't look like a valid email.</p>
-            <p class="help-block" ng-show="form.email.$error.required && submitted">What's your email address?</p>
-            <p class="help-block" ng-show="form.email.$error.mongoose">{{ errors.email }}</p>
+            <input id="email" type="email" name="email" class="form-control" ng-model="signup.user.email" required mongoose-error/>
+            <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>
+            <p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>
+            <p class="help-block" ng-show="form.email.$error.mongoose">{{ signup.errors.email }}</p>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.password.$valid && submitted, 'has-error': form.password.$invalid && submitted }">
+        <div class="form-group" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">
             <label for="password">Password</label>
-            <input id="password" type="password" name="password" class="form-control" ng-model="user.password" ng-minlength="3" required mongoose-error/>
-            <p class="help-block" ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">Password must be at least 3 characters.</p>
-            <p class="help-block" ng-show="form.password.$error.mongoose">{{ errors.password }}</p>
+            <input id="password" type="password" name="password" class="form-control" ng-model="signup.user.password" ng-minlength="3" required mongoose-error/>
+            <p class="help-block" ng-show="(form.password.$error.minlength || form.password.$error.required) && signup.submitted">Password must be at least 3 characters.</p>
+            <p class="help-block" ng-show="form.password.$error.mongoose">{{ signup.errors.password }}</p>
         </div>
-
 
         <div>
           <button class="btn btn-inverse btn-lg btn-register" type="submit">Sign up</button>
@@ -55,13 +54,26 @@
 
         <hr>
         <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')"><i class="fa fa-facebook"></i> Connect with Facebook</a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')"><i class="fa fa-google-plus"></i> Connect with Google+</a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')"><i class="fa fa-twitter"></i> Connect with Twitter</a>
+          <a class="btn btn-facebook" href="" ng-click="signup.loginOauth('facebook')"><i class="fa fa-facebook"></i> Connect with Facebook</a>
+          <a class="btn btn-google-plus" href="" ng-click="signup.loginOauth('google')"><i class="fa fa-google-plus"></i> Connect with Google+</a>
+          <a class="btn btn-twitter" href="" ng-click="signup.loginOauth('twitter')"><i class="fa fa-twitter"></i> Connect with Twitter</a>
         </div>
 
       </form>
+      <hr/>
+      <input type="file" nv-file-select uploader="signup.uploader"/><br/>
+      <ul>
+        <li ng-repeat="item in signup.uploader.queue">
+          Name: <span ng-bind="item.file.name"></span><br/>
+          <button ng-click="item.upload()">upload</button>
+        </li>
+      </ul>
+
+
     </div>
   </div>
   <hr>
 </div>
+
+<img ng-if="signup.user.picUrl" ng-src="/api/images{{signup.user.picUrl}}" />
+
