--- a/client/app/account/settings/password/settings.html
+++ b/client/app/account/settings/password/settings.html
@@ -1,5 +1,5 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
+<div ng-include="'components/layout/navbar/navbar.html'"></div>
+{{test}}
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
