--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,4 +1,4 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<div ng-include="'components/layout/navbar/navbar.html'"></div>
 
 <div class="container">
   <div class="row">
@@ -34,9 +34,10 @@
 
         <div class="form-group" ng-class="{ 'has-success': form.email.$valid && signup.submitted, 'has-error': form.email.$invalid && signup.submitted }">
             <label for="email">Email</label>
-            <input id="email" type="email" name="email" class="form-control" ng-model="signup.user.email" required mongoose-error/>
+            <input id="email" type="email" name="email" class="form-control" ng-model="signup.user.email" ng-pattern="/\.edu$/"  required mongoose-error/>
             <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>
             <p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>
+            <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Your email have to finish with .edu</p>
             <p class="help-block" ng-show="form.email.$error.mongoose">{{ signup.errors.email }}</p>
         </div>
 
@@ -56,7 +57,8 @@
         <div>
           <a class="btn btn-facebook" href="" ng-click="signup.loginOauth('facebook')"><i class="fa fa-facebook"></i> Connect with Facebook</a>
           <a class="btn btn-google-plus" href="" ng-click="signup.loginOauth('google')"><i class="fa fa-google-plus"></i> Connect with Google+</a>
-          <a class="btn btn-twitter" href="" ng-click="signup.loginOauth('twitter')"><i class="fa fa-twitter"></i> Connect with Twitter</a>
+          <a class="btn btn-linkedin" href="" ng-click="signup.loginOauth('linkedin')"><i class="fa fa-linkedin"></i> Connect with Linkedin</a>
+          <!--<a class="btn btn-twitter" href="" ng-click="signup.loginOauth('twitter')"><i class="fa fa-twitter"></i> Connect with Twitter</a>-->
         </div>
 
       </form>
