--- a/client/app/account/settings/user_info/user.info.html
+++ b/client/app/account/settings/user_info/user.info.html
@@ -8,24 +8,24 @@
     <div class="col-sm-12">
 
           <label for="firstname">Name</label>
-          <input type="text" id="firstname" name="firstname" class="form-control" ng-model="info.me.firstname"/>
+          <input type="text" id="firstname" name="firstname" class="form-control" ng-model="info.tempMe.firstname"/>
 
          <label for="lastname">Last name</label>
-          <input type="text" id="lastname" name="lastname" class="form-control" ng-model="info.me.lastname"/>
+          <input type="text" id="lastname" name="lastname" class="form-control" ng-model="info.tempMe.lastname"/>
 
         <label for="username">User name</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="info.me.username "/>
+          <input type="text" id="username" name="username" class="form-control" ng-model="info.tempMe.username "/>
 
          <label for="middlename">Middle name</label>
-          <input type="text" id="middlename" name="middlename" class="form-control" ng-model="info.me.middlename"/>
+          <input type="text" id="middlename" name="middlename" class="form-control" ng-model="info.tempMe.middlename"/>
 
          <label for="email">Email</label>
-          <input type="email" id="email" name="email" class="form-control" ng-model="info.me.email"/>
+          <input type="email" id="email" name="email" class="form-control" ng-model="info.tempMe.email"/>
 
          <label for="phone">Phone number:</label>
-          <input type="text" id="phone" name="phone" class="form-control" ng-model="info.me.phone"/>
+          <input type="text" id="phone" name="phone" class="form-control" ng-model="info.tempMe.phone"/>
       <br/>
-      <button class="btn btn-primary" ng-click="info.saveUserInfo()">Save</button>
+      <button class="btn btn-primary" ng-click="info.saveUserInfo(info.tempMe)">Save</button>
         <!--<div class="form-group">-->
           <!--<label for="newpassword">New Password</label>-->
           <!--<input type="password" name="newPassword" id="newpassword" class="form-control" ng-model="user.newPassword" ng-minlength="3" required/>-->
