--- a/client/app/account/settings/user_info/user.info.html
+++ b/client/app/account/settings/user_info/user.info.html
@@ -1,22 +1,36 @@
-<div ng-include="'components/layout/navbar/navbar.html'"></div>
-
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
       <h1>Change user's information</h1>
     </div>
     <div class="col-sm-12">
+<div class="row">
+  <div class="col-sm-2">
+    <img class="img-circle" ng-if="info.me.userImage" ng-src="/api/images{{info.me.userImage}}" style="height: 80px"/>
+    <img class="img-circle" ng-if="!info.me.userImage" ng-src="http://images.sodahead.com/polls/003831759/331109413_question_mark_face_answer_5_xlarge.jpeg" style="height: 80px"/>
 
+    <input type="file" nv-file-select uploader="info.uploader" id="fileUpload" /><br/>
+    <ul>
+      <li ng-repeat="item in info.uploader.queue">
+        Name: <span ng-bind="item.file.name"></span><br/>
+        <button ng-click="item.upload()">upload</button>
+      </li>
+    </ul>
+  </div>
+  <div class="col-sm-10">
           <label for="firstname">Name</label>
           <input type="text" id="firstname" name="firstname" class="form-control" ng-model="info.tempMe.firstname"/>
 
-         <label for="lastname">Last name</label>
+          <label for="lastname">Last name</label>
           <input type="text" id="lastname" name="lastname" class="form-control" ng-model="info.tempMe.lastname"/>
 
-        <label for="username">User name</label>
+  </div>
+  </div>
+
+          <label for="username">User name</label>
           <input type="text" id="username" name="username" class="form-control" ng-model="info.tempMe.username "/>
 
-         <label for="middlename">Middle name</label>
+          <label for="middlename">Middle name</label>
           <input type="text" id="middlename" name="middlename" class="form-control" ng-model="info.tempMe.middlename"/>
 
          <label for="email">Email</label>
@@ -25,16 +39,11 @@
          <label for="phone">Phone number:</label>
           <input type="text" id="phone" name="phone" class="form-control" ng-model="info.tempMe.phone"/>
       <br/>
-      <button class="btn btn-primary" ng-click="info.saveUserInfo(info.tempMe)">Save</button>
-        <!--<div class="form-group">-->
-          <!--<label for="newpassword">New Password</label>-->
-          <!--<input type="password" name="newPassword" id="newpassword" class="form-control" ng-model="user.newPassword" ng-minlength="3" required/>-->
-          <!--<p class="help-block" ng-show="(infoForm.newPassword.$error.minlength || infoForm.newPassword.$error.required) && (infoForm.newPassword.$dirty || submitted)">-->
-            <!--Password must be at least 3 characters.-->
-          <!--</p>-->
-        <!--</div>-->
 
-        <!--<p class="help-block"> {{ message }} </p>-->
+
+      <br/>
+      <button class="btn btn-primary" ng-click="info.saveUserInfo(info.tempMe)">Save</button>
+
 
 
     </div>
