--- a/client/index.html
+++ b/client/index.html
@@ -80,20 +80,30 @@
           <script src="components/widgets/widgets.module.js"></script>
           <script src="components/layout/layout.module.js"></script>
           <script src="app/account/account.module.js"></script>
+          <script src="app/dashboard/dashboard.module.js"></script>
 
           <!-- injector:js -->
           <script src="app/account/account.routes.js"></script>
           <script src="app/account/login/login.controller.js"></script>
-          <script src="app/account/settings/password/settings.controller.js"></script>
+          <script src="app/account/settings/password/password.controller.js"></script>
+          <script src="app/account/settings/password/password.route.js"></script>
+          <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/settings/user_info/user.info.controller.js"></script>
+          <script src="app/account/settings/user_info/user.info.route.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/dashboard/dashboard.controller.js"></script>
+          <script src="app/dashboard/my-properties/add.new.property/add.new.property.controller.js"></script>
+          <script src="app/dashboard/my-properties/add.new.property/add.new.route.js"></script>
+          <script src="app/dashboard/my-properties/my.properties.controller.js"></script>
+          <script src="app/dashboard/my-properties/my.property.route.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/prerender.controller.js"></script>
           <script src="components/blocks/socket/socket.service.js"></script>
           <script src="components/core/auth/auth.service.js"></script>
+          <script src="components/core/auth/property.service.js"></script>
           <script src="components/core/auth/user.service.js"></script>
           <script src="components/core/common.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
