--- a/client/app/dashboard/my-properties/my.properties.html
+++ b/client/app/dashboard/my-properties/my.properties.html
@@ -1,13 +1,13 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
-
+<div class="container">
 <a class="btn btn-primary" ui-sref=".addNew">Add new property</a>
 <br/>
 
-<div ui-view="">
+<div ui-view="" >
   some user property <br/>
   some user property info <br/>
   some user property info <br/>
-  <br/>
   some user property info
 
+</div>
 </div>
