--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,9 +1,9 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
-
-<input type="text" placeholder="Street name" address-autocomplete="main.address">
-{{main.test}}
+<div class="container">
+<h1>Welcome to main view</h1>
 
 
 <div ng-include="'components/layout/footer/footer.html'"></div>
 
 
+</div>
