--- a/client/index.html
+++ b/client/index.html
@@ -85,11 +85,24 @@
           <!-- injector:js -->
           <script src="app/account/account.routes.js"></script>
           <script src="app/account/login/login.controller.js"></script>
+          <script src="app/account/settings/address/add/new.address.controller.js"></script>
+          <script src="app/account/settings/address/add/new.address.route.js"></script>
+          <script src="app/account/settings/address/address.controller.js"></script>
+          <script src="app/account/settings/address/address.route.js"></script>
           <script src="app/account/settings/password/password.controller.js"></script>
           <script src="app/account/settings/password/password.route.js"></script>
+          <script src="app/account/settings/pets/add/new.pet.controller.js"></script>
+          <script src="app/account/settings/pets/add/new.pet.route.js"></script>
+          <script src="app/account/settings/pets/pet.controller.js"></script>
+          <script src="app/account/settings/pets/pet.route.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
+          <script src="app/account/settings/settings.route.js"></script>
           <script src="app/account/settings/user_info/user.info.controller.js"></script>
           <script src="app/account/settings/user_info/user.info.route.js"></script>
+          <script src="app/account/settings/vehicle/add/new.vehicle.controller.js"></script>
+          <script src="app/account/settings/vehicle/add/new.vehicle.route.js"></script>
+          <script src="app/account/settings/vehicle/vehicle.controller.js"></script>
+          <script src="app/account/settings/vehicle/vehicle.route.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
@@ -103,9 +116,13 @@
           <script src="app/prerender.controller.js"></script>
           <script src="components/blocks/socket/socket.service.js"></script>
           <script src="components/core/auth/auth.service.js"></script>
-          <script src="components/core/auth/property.service.js"></script>
           <script src="components/core/auth/user.service.js"></script>
           <script src="components/core/common.js"></script>
+          <script src="components/core/data/address.js"></script>
+          <script src="components/core/data/dataservice.js"></script>
+          <script src="components/core/data/pet.js"></script>
+          <script src="components/core/data/property.js"></script>
+          <script src="components/core/data/vehicle.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
           <script src="components/layout/navbar/navbar.controller.js"></script>
           <script src="components/widgets/adress-autocomplete/adress-autocomplete.directive.js"></script>
