--- a/client/app/account/settings/user_info/user.info.html
+++ b/client/app/account/settings/user_info/user.info.html
@@ -23,10 +23,8 @@
 
           <label for="lastname">Last name</label>
           <input type="text" id="lastname" name="lastname" class="form-control" ng-model="info.tempMe.lastname"/>
-
   </div>
   </div>
-
           <label for="username">User name</label>
           <input type="text" id="username" name="username" class="form-control" ng-model="info.tempMe.username "/>
 
@@ -39,13 +37,13 @@
          <label for="phone">Phone number:</label>
           <input type="text" id="phone" name="phone" class="form-control" ng-model="info.tempMe.phone"/>
       <br/>
-
-
       <br/>
-      <button class="btn btn-primary" ng-click="info.saveUserInfo(info.tempMe)">Save</button>
-
-
-
+      <button class="btn btn-primary" ng-click="info.saveUserInfo(info.tempMe)">Save changes</button>
     </div>
   </div>
+
+
+
+
+
 </div>
