adding education view, states and backed API's

--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -5,6 +5,7 @@
 <button class="btn btn-primary" ui-sref=".userInfo">Edit user info</button>
 <button class="btn btn-primary" ui-sref=".vehicle">Manage vehicles</button>
 <button class="btn btn-primary" ui-sref=".address">Manage addresses</button>
-<button class="btn btn-primary" ui-sref=".pets">Manage pets</button></div>
-
+<button class="btn btn-primary" ui-sref=".pets">Manage pets</button>
+<button class="btn btn-primary" ui-sref=".education">Your education</button></div>
+</div>
 <div ui-view class="container"></div>
