--- a/client/index.html
+++ b/client/index.html
@@ -94,6 +94,8 @@
           <script src="app/account/settings/address/address.route.js"></script>
           <script src="app/account/settings/education/add/new.education.controller.js"></script>
           <script src="app/account/settings/education/add/new.education.route.js"></script>
+          <script src="app/account/settings/education/edit/edit.education.controller.js"></script>
+          <script src="app/account/settings/education/edit/edit.education.route.js"></script>
           <script src="app/account/settings/education/education.controller.js"></script>
           <script src="app/account/settings/education/education.route.js"></script>
           <script src="app/account/settings/password/password.controller.js"></script>
