--- a/client/index.html
+++ b/client/index.html
@@ -102,6 +102,8 @@
           <script src="app/account/settings/password/password.route.js"></script>
           <script src="app/account/settings/pets/add/new.pet.controller.js"></script>
           <script src="app/account/settings/pets/add/new.pet.route.js"></script>
+          <script src="app/account/settings/pets/edit/edit.pet.controller.js"></script>
+          <script src="app/account/settings/pets/edit/edit.pet.route.js"></script>
           <script src="app/account/settings/pets/pet.controller.js"></script>
           <script src="app/account/settings/pets/pet.route.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
