--- a/client/index.html
+++ b/client/index.html
@@ -138,6 +138,7 @@
           <script src="components/layout/footer/footer.controller.js"></script>
           <script src="components/layout/navbar/navbar.controller.js"></script>
           <script src="components/widgets/adress-autocomplete/adress-autocomplete.directive.js"></script>
+          <script src="components/widgets/confirm-password/confirm.password.directive.js"></script>
           <script src="components/widgets/modal/modal.service.js"></script>
           <script src="components/widgets/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/widgets/widget.config.js"></script>
