--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -18,12 +18,15 @@
           <input type="password" name="password" id="password" class="form-control" ng-model="user.password" required>
         </div>
 
+        <div class="form-group">
+          <label for="confirmPassword">Confirm</label>
+          <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" ng-model="user.confirmPassword" match="user.password" required>
+        </div>
         <div class="form-group has-error">
           <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">Please enter your email and password.</p>
           <p class="help-block" ng-show="form.email.$error.email && submitted">Please enter a valid email.</p>
           <p class="help-block">{{ errors.other }}</p>
         </div>
-
         <div>
           <button class="btn btn-inverse btn-lg btn-login" type="submit">Login</button>
           <a class="btn btn-default btn-lg btn-register" ui-sref="signup">Register</a>
