--- a/client/app/account/settings/pets/edit/edit.pet.html
+++ b/client/app/account/settings/pets/edit/edit.pet.html
@@ -6,7 +6,7 @@
     <div class="col-sm-12">
 
       <label for="type">Type</label>
-      <select id="type" class="form-control" ng-model="editPet.tempPet.type">
+      <select id="type" class="form-control" data-ng-model="editPet.tempPet.type">
         <option value="cat">Cat</option>
         <option value="dog">Dog</option>
         <option value="bird">Bird</option>
@@ -27,5 +27,5 @@
     </div>
   </div>
 
-  <pre>{{editPet.tempPet|json}}</pre>
+  <pre>{{editPet.tempPet | json}}</pre>
 </div>
