--- a/client/index.html
+++ b/client/index.html
@@ -92,6 +92,8 @@
           <script src="app/account/settings/address/add/new.address.route.js"></script>
           <script src="app/account/settings/address/address.controller.js"></script>
           <script src="app/account/settings/address/address.route.js"></script>
+          <script src="app/account/settings/address/edit/edit.addreass.route.js"></script>
+          <script src="app/account/settings/address/edit/edit.address.controller.js"></script>
           <script src="app/account/settings/education/add/new.education.controller.js"></script>
           <script src="app/account/settings/education/add/new.education.route.js"></script>
           <script src="app/account/settings/education/edit/edit.education.controller.js"></script>
