--- a/client/app/account/settings/address/add/new.address.html
+++ b/client/app/account/settings/address/add/new.address.html
@@ -20,10 +20,11 @@
     <input type="text" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="newAddress.address.streetAddress.zip"/>
 
     <label for="apt">Apt</label>
-    <input type="text" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="newAddress.address.streetAddress.apt"/>
+    <input type="text" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="newAddress.address.streetAddress.apt"/><br/>
 
-    <label for="apt">present</label>
-    <input type="number" id="present" name="present" class="form-control"  placeholder="present" ng-model="newAddress.address.streetAddress.present"/>
+    <label for="present">Present?</label><br/>
+    <label class="radio-inline"><input type="radio" name="present" id="present" ng-model="newAddress.address.streetAddress.present" value="1">Yes</label>
+    <label class="radio-inline"><input type="radio" name="present"  ng-model="newAddress.address.streetAddress.present" value="0">No</label><br/><br/>
 
     <label for="about">About me</label>
     <textarea name="about" id="about" cols="30" rows="5" placeholder="about me" data-ng-model="newAddress.address.about"  class="form-control" ></textarea>
