adding user occupation and finance frontend views and states

--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -6,6 +6,9 @@
 <button class="btn btn-primary" ui-sref=".vehicle">Manage vehicles</button>
 <button class="btn btn-primary" ui-sref=".address">Manage addresses</button>
 <button class="btn btn-primary" ui-sref=".pets">Manage pets</button>
-<button class="btn btn-primary" ui-sref=".education">Your education</button></div>
+<button class="btn btn-primary" ui-sref=".education">Your education</button>
+<button class="btn btn-primary" ui-sref=".occupation">Your occupations</button>
+<button class="btn btn-primary" ui-sref=".finance">Your finances</button>
 </div>
+
 <div ui-view class="container"></div>
