--- a/client/index.html
+++ b/client/index.html
@@ -100,6 +100,10 @@
           <script src="app/account/settings/education/edit/edit.education.route.js"></script>
           <script src="app/account/settings/education/education.controller.js"></script>
           <script src="app/account/settings/education/education.route.js"></script>
+          <script src="app/account/settings/finance/finance.controller.js"></script>
+          <script src="app/account/settings/finance/finance.route.js"></script>
+          <script src="app/account/settings/occupation/occupation.controller.js"></script>
+          <script src="app/account/settings/occupation/occupation.route.js"></script>
           <script src="app/account/settings/password/password.controller.js"></script>
           <script src="app/account/settings/password/password.route.js"></script>
           <script src="app/account/settings/pets/add/new.pet.controller.js"></script>
