--- a/client/app/dashboard/my-properties/add.new.property/add.new.property.html
+++ b/client/app/dashboard/my-properties/add.new.property/add.new.property.html
@@ -19,6 +19,49 @@
       <label for="zip">Zip code</label>
       <input type="text" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="addNew.property.streetAddress.zip"/>
 
+      <label for="apt">Apt</label>
+      <input type="text" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="addNew.property.apt"/>
+
+      <label for="bldg">Bldg</label>
+      <input type="text" id="bldg" name="bldg" class="form-control"  placeholder="bldg" ng-model="addNew.property.bldg"/>
+
+      <label for="type">Type</label>
+      <select id="type" class="form-control" data-ng-model="addNew.property.type">
+        <option value="apt">Apt</option>
+        <option value="sfh">sfh</option>
+        <option value="duplex">Duplex</option>
+        <option value="land">Land</option>
+        <option value="townhouse">Townhouse</option>
+      </select>
+
+      <label for="bedrooms">Bedrooms?</label><br/>
+      <input type="number" id="bedrooms" name="bedrooms" class="form-control"  placeholder="Number of bedrooms" ng-model="addNew.property.bedrooms"/>
+
+      <label for="bathrooms">Bathrooms?</label><br/>
+      <input type="number" id="bathrooms" name="bathrooms" class="form-control"  placeholder="Number of bathrooms" ng-model="addNew.property.bathrooms"/>
+
+      <label for="parkingSpots">Parking spots?</label><br/>
+      <input type="number" id="parkingSpots" name="parkingSpots" class="form-control"  placeholder="Number of parking spots" ng-model="addNew.property.parkingSpots"/>
+
+      <label for="livingAreaSqFt">Living area SqFt</label><br/>
+      <input type="number" id="livingAreaSqFt" name="livingAreaSqFt" class="form-control"  placeholder="Living area sqFt" ng-model="addNew.property.livingAreaSqFt"/>
+
+      <label for="hoaFee">Hoa fee</label><br/>
+      <input type="number" id="hoaFee" name="hoaFee" class="form-control"  placeholder="hoa fee" ng-model="addNew.property.hoaFee"/>
+
+      <label for="otherFee">Other fee</label><br/>
+      <input type="number" id="otherFee" name="otherFee" class="form-control"  placeholder="other fee" ng-model="addNew.property.otherFee"/>
+
+      <label for="status">Type</label>
+      <select id="status" class="form-control" data-ng-model="addNew.property.status">
+        <option value="avail">Available</option>
+        <option value="pending">Pending</option>
+        <option value="rented">Rented</option>
+      </select>
+
+      <label for="description">Property description</label>
+      <textarea name="description" id="description" cols="30" rows="5" placeholder="description" data-ng-model="addNew.property.description"  class="form-control" ></textarea>
+
       <label for="picture">Upload picture</label>
       <input name="picture" type="file" nv-file-select uploader="addNew.uploader" id="picture" />
       <ul>
@@ -28,7 +71,7 @@
         </li>
       </ul>
       <br/>
-      <button class="btn btn-primary" ng-click="addNew.addNewProperty(addNew.property.streetAddress)">Save new property</button>
+      <button class="btn btn-primary" ng-click="addNew.addNewProperty(addNew.property)">Save new property</button>
 
     </div>
 
